--- a/Hackathon/needhelp.html
+++ b/Hackathon/needhelp.html
@@ -10,6 +10,25 @@
 <head>
 	<title> Domestic Violence </title>
 	<link rel = "icon" href = "profile.jpg" type = "image/x-icon">
+	<style>
+		.container {
+			margin-top: 20px;
+		}
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+          background-color: #dddddd;
+        }
+	</style>
 </head>
 <body>
 		<div class="navbar fixed-top">
@@ -391,6 +410,102 @@
 			
 			</div>
 		</nav>
+		<div class="container">
+			<h2>Need Help ?</h2>
+			<h3>Obtaining Domestic Abuse Help And Support</h3>
+			<p>Domestic violence, also referred to as domestic abuse, involves physical, mental , and sexual abuse in couple or family relationships. There can be domestic violence against anyone and someone can be an abuser.</p>
+			<p>You don't have to wait to get help in an emergency situation. When you are experiencing domestic violence, it is important to tell someone, and know that you are not alone.</p>
+		</div>
+		<div class="container">
+			<h3>Other Ways To Get Support</h3>
+			<table>
+                  <tr>
+                     <th><h3>Help Available</h3></th>
+                     <th><h3>Contact</h3></th>
+                  </tr>
+                  <tr>
+                     <td>Central Social Welfare Board -Police Helpline</td>
+                     <td>1091/ 1291, (011) 23317004</td>
+                  </tr>
+                  <tr>
+                    <td>Shakti Shalini</td>
+                    <td>10920</td>
+                  </tr>
+                  <tr>
+                    <td>SAARTHAK</td>
+                    <td>(011) 26853846/ 26524061</td>
+                   </tr>
+                  <tr>
+                    <td>All India Women's Conference</td>
+                    <td>10921/ (011) 23389680</td>
+                  </tr>
+                  <tr>
+                    <td>Joint Women's Programme (also has branches in Bangalore, Kolkata, Chennai)</td>
+                    <td>(011) 24619821</td>
+                  </tr>
+                  <tr>
+                    <td>Sakshi - violence intervention center</td>
+                    <td>(0124) 2562336/ 5018873</td>
+                  </tr>
+                  <tr>
+                    <td>Nirmal Niketan</td>
+                    <td>(011) 27859158</td>
+                  </tr>
+                  <tr>
+                    <td>Nari Raksha Samiti</td>
+                    <td>(011) 23973949</td>
+                  </tr>
+                  <tr>
+                    <td>RAHI Recovering and Healing from Incest. A support centre for women survivors of child sexual abuse</td>
+                    <td>(011) 26238466/ 26224042, 26227647</td>
+                  </tr>
+            </table>
+		</div>
+		<div class="container">
+			<h3>Legal Ways</h3>
+			<table>
+				<tr>
+					<th><h3>Help Available</h3></th>
+					<th><h3>Contact</h3></th>
+				</tr>
+				<tr>
+					<td>Human Rights Law Network runs Madhyam Helpline and provide Legal Services</td>
+					<td>(011) 24316922/ 24324503</td>
+				</tr>
+				<tr>
+					<td>Lawyers Collective Womens Rights Initiative LC WRI runs a pro-bono legal aid cell for domestic violence cases</td>
+					<td>(011) 24373993/ 24372923</td>
+				</tr>
+				<tr>
+					<td>MARG (Multiple Action Research Group)</td>
+					<td>(011) 26497483 / 26496925</td>
+				</tr>
+				<tr>
+					<td>Delhi Commission for Women</td>
+					<td>(011) 23379181/ 23370597</td>
+				</tr>
+				<tr>
+					<td>Women's Cell, Delhi Police</td>
+					<td>(011) 24673366 / 4156 / 7699</td>
+				</tr>
+				<tr>
+					<td>National Human Rights Commission</td>
+					<td>(011) 23385368/9810298900</td>
+				</tr>
+				<tr>
+					<td>Pratidhi</td>
+					<td>(011) 22527259</td>
+				</tr>
+				<tr>
+					<td>Counselling Services on Women in Distress - Organised by Delhi Police</td>
+					<td>3317004</td>
+				</tr>
+				<tr>
+					<td>Sarthak - Career Guidance and Counselling for young people</td>
+					<td>9628052777, 9628019278, 9628019279</td>
+				</tr>
+			</table>
+		</div>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
