--- a/Hackathon/reportissue.html
+++ b/Hackathon/reportissue.html
@@ -389,6 +389,17 @@
 			
 			</div>
 		</nav>
+		<div class="container">
+			<h2>Report Issues</h2>
+		</div>
+		<div class="container">
+			<p style="margin: 10px;">NAME : 
+              <input style="width: 90%;" type="text" name="username" placeholder="Enter Full Name">
+            </p>
+            <p style="margin: 10px;">EMAIL  : 
+              <input style="width: 90%;" type="text" name="username" placeholder="Enter Mail Id">
+            </p>
+		</div>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
